fixed css footer on mobile view

--- a/src/static/css/Footer.css
+++ b/src/static/css/Footer.css
@@ -159,14 +159,14 @@
     .btn {
       width: 100%;
     }
-  
+/*   
     .footer-link-wrapper {
       flex-direction: column;
-    }
+    } */
   
-    .social-media-wrap {
+    /* .social-media-wrap {
       flex-direction: column;
-    }
+    } */
   }
   
   @media screen and (max-width: 768px) {
